tests/should-fail/rawcodes/rawcodelit-9.j
globals
    integer m = '\\a'
endglobals